DSE 5.1.0
 * Allow grammar extensions to be added to cqlsh for tab completion (APOLLO-295)
 * Improve compaction performance (APOLLO-123)
 * Add client warning to SASI index (APOLLO-93)
 * Cqlsh copy-from: add support for UNSET values (APOLLO-4)
 * Improve error message for incompatible authn/authz config (APOLLO-226)
 * Continuous paging (APOLLO-3, APOLLO-267, APOLLO-277, APOLLO-291, APOLLO-312)
 * Added show-queries, query-log-file and no-progress log options to cassandra-stress (APOLLO-41)
 * Allow large partition generation in cassandra-stress user mode (APOLLO-35)
 * Optimize VIntCoding and BufferedDataOutputStreamPlus (APOLLO-49)
 * Improve metrics and reduce overhead under contention (APOLLO-81)
 * Make SinglePartitionReadCommand::queriesMulticellType() faster (APOLLO-117)
 * Accept internal resource name in GRANT/REVOKE statements (APOLLO-113)
 * Improve StatementRestrictions::getPartitionKeys() execution speed (APOLLO-115)
 * Move responsibility for qualifying ks in authz stmts to IResource (APOLLO-76)
 * Insert default superuser role with fixed timestamp (APOLLO-18)
 * Make Permissions extensible (APOLLO-26)
 * Make IResource more easily extensible (APOLLO-26)
 * Add method to IAuthenticator to login by user as well as by role (APOLLO-70)
 * Add private protocol version (APOLLO-2)
Merged from DSE 5.0.x
 * Always die on AssertionError and log flush failure errors. (APOLLO-227)
 * Indexer is not correctly invoked when building indexes over sstables (CASSANDRA-13075)
 * Perform repair sync sequentially to avoid overloading coordinator (APOLLO-216)
 * Backport CASSANDRA-10134 Always perform collision check before joining ring (CASSANDRA-10134)
 * Backport CASSANDRA-12461 (Add pre- and post-shutdown hooks to Storage Service) (APOLLO-48)
 * Wait for remaining tasks to finish on RepairJob after task failure (APOLLO-87)
 * Allow the prepared statement cache size to be changed. (APOLLO-50)


3.12
 * Avoid byte-array copy when key cache is disabled (CASANDRA-13084)