@@ -1,4 +1,5 @@
 DSE 5.1.0
+ * Allow to add IndexRestrictions to SelectStatement in an immutable way (APOLLO-323)
  * Allow grammar extensions to be added to cqlsh for tab completion (APOLLO-295)
  * Improve compaction performance (APOLLO-123)
  * Add client warning to SASI index (APOLLO-93)
